fixes and improvements
added error message for TOS not being accepted
simplified confirm step validation
scrolls to position of first error
fixed: exclusive seats not highlighted
fixed: passbook log message column too short

--- a/app/assets/stylesheets/ticketing/orders.css.scss
+++ b/app/assets/stylesheets/ticketing/orders.css.scss
@@ -469,6 +469,10 @@ table.details {
       tr td {
         padding: 7px;
         
+        &:first-child {
+          width: 7%;
+        }
+        
         &:last-child {
           border-left: none;
         }
